--- a/templates/signup.html
+++ b/templates/signup.html
@@ -47,6 +47,19 @@
         .signup-container button:hover {
             background-color: #218838;
         }
+        .password-rules {
+            text-align: left;
+            margin: 20px 0;
+            font-size: 14px;
+            color: #666;
+        }
+        .password-rules ul {
+            list-style: none;
+            padding: 0;
+        }
+        .password-rules ul li {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -56,6 +69,15 @@
             <input type="email" id="email" placeholder="E-mail Address" required>
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="password-re" placeholder="Confirm Password" required>
+            <div class="password-rules">
+                <h4>Password Requirements:</h4>
+                <ul>
+                    <li>At least 8 characters long</li>
+                    <li>At least one uppercase letter (A-Z)</li>
+                    <li>At least one lowercase letter (a-z)</li>
+                    <li>At least one number (0-9)</li>
+                </ul>
+            </div>
             <button type="submit">Sign Up</button>
         </form>
     </div>
