signin now requires email verification.

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -46,6 +46,19 @@
         .reset_password-container button:hover {
             background-color: #218838;
         }
+        .password-rules {
+            text-align: left;
+            margin: 20px 0;
+            font-size: 14px;
+            color: #666;
+        }
+        .password-rules ul {
+            list-style: none;
+            padding: 0;
+        }
+        .password-rules ul li {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -54,6 +67,16 @@
         <form id="resetPasswordForm">
             <input type="password" id="newPassword" placeholder="New Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+            <div class="password-rules">
+                <h4>Password Requirements:</h4>
+                <ul>
+                    <li>At least 8 characters long</li>
+                    <li>At least one uppercase letter (A-Z)</li>
+                    <li>At least one lowercase letter (a-z)</li>
+                    <li>At least one number (0-9)</li>
+                    <li>Must be different from the old password</li>
+                </ul>
+            </div>
             <button type="submit">Update Password</button>
         </form>
     </div>
@@ -93,7 +116,7 @@
             }
 
             if (newPassword !== confirmPassword) {
-                alert('Passwords do not match');
+                alert('Passwords do not match.');
                 return;
             }
 
