--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -239,6 +239,11 @@
                             <td class="cross"></td>
                             <td class="check"></td>
                         </tr>
+                        <tr>
+                            <td>AI</td>
+                            <td class="cross"></td>
+                            <td class="check"></td>
+                        </tr>
                     </tbody>
                 </table>
                 <table class="comparison-table">
