--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -51,7 +51,7 @@
             font-size: 1.2rem;
             border-radius: 0.25rem;
             display: block;
-            margin-top: 47rem; /* Align to bottom */
+            margin-top: 43rem; /* Align to bottom */
         }
         .sidebar .logout:hover {
             background-color: #c9302c;
@@ -178,6 +178,7 @@
         <a href="/my_profile">My Profile</a>
         <a href="/forecaster">Forecaster</a>
         <a href="/about_models">About Models</a>
+        <a href="/references">References</a>
         <a href="/logout" class="logout">Log Out</a>
     </div>
     <div class="main-content">
@@ -265,6 +266,11 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>3 Months</td>
+                            <td class="check"></td>
+                            <td class="check"></td>
+                        </tr>
+                        <tr>
                             <td>6 Months</td>
                             <td class="check"></td>
                             <td class="check"></td>
@@ -276,7 +282,7 @@
                         </tr>
                         <tr>
                             <td>1 Year</td>
-                            <td class="check"></td>
+                            <td class="cross"></td>
                             <td class="check"></td>
                         </tr>
                         <tr>
