--- a/templates/main.html
+++ b/templates/main.html
@@ -47,7 +47,7 @@
             font-size: 1.2rem;
             border-radius: 0.25rem;
             display: block;
-            margin-top: 47rem;
+            margin-top: 43rem;
         }
         .sidebar .logout:hover {
             background-color: #c9302c; /* Darker on hover */
@@ -67,6 +67,7 @@
             box-sizing: border-box;
             padding: 1rem;
             margin-bottom: 1rem;
+            margin-left:0.25rem;
             width: 100%;
             height: 100%;
             background-color: #1f1f1f; /* Dark background for containers */
@@ -314,6 +315,7 @@
         <a href="/my_profile">My Profile</a>
         <a href="/forecaster">Forecaster</a>
         <a href="/about_models">About Models</a>
+        <a href="/references">References</a>
         <a href="/logout" class="logout">Log Out</a>
     </div>
     <div class="main-content">
@@ -354,6 +356,7 @@
                 </select>
                 <select id="data_length">
                     <option value="" disabled selected>Historical Data Length</option>
+                    <option value="3_months">3 Months</option>
                     <option value="6_months">6 Months</option>
                     <option value="9_months">9 Months</option>
                     <option value="1_year">1 Year</option>
@@ -447,7 +450,7 @@
         }
         function filterBasicOptions(modelSelect, dataLengthSelect, forecastDaysSelect) {
             const premiumModels = ['ARCH', 'UCM', 'SARIMA', 'AI'];
-            const premiumDataLengths = ['2_years', '3_years', '4_years', '5_years'];
+            const premiumDataLengths = ['1_year', '2_years', '3_years', '4_years', '5_years'];
             const premiumForecastDays = ['3_months', '4_months', '5_months', '6_months', '1_year'];
 
             // Disable premium models
@@ -673,7 +676,7 @@
                 // Update the layout to include the secondary y-axis for volume and dynamic title
                 const layout = {
                     title: {
-                        text: `${fullModelName} <br> Forecast for ${symbol}`,
+                        text: `<b>Fin-AiDea</b> <br> ${fullModelName} <br> Forecast for ${symbol}`,
                         font: { color: '#fff' } // Set title color to white
                     },
                     grid: { rows: 3, columns: 1, pattern: 'independent' },
