--- a/templates/signup.html
+++ b/templates/signup.html
@@ -134,6 +134,7 @@
             }).then(response => response.json())
               .then(data => {
                   if (data.redirect) {
+                      alert(data.message);
                       window.location.href = data.redirect;
                   } else {
                       alert(data.message);
